fix: consider gaps for positioning

--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -31,7 +31,6 @@
 .timeline__items-container {
   display: flex;
   flex-direction: column;
-  gap: var(--gap);
   flex: 1;
 }
 
@@ -49,6 +48,10 @@
   align-items: flex-start;
   transition: top 0.1s;
   gap: var(--card-offset);
+}
+
+.timeline-item:not(:last-child) {
+  margin-bottom: var(--gap);
 }
 
 .timeline__items-container--left .timeline-item {
